--- a/templates/gone_costal.html
+++ b/templates/gone_costal.html
@@ -88,8 +88,8 @@
                     <div class="hotel-name">
                         <h2>About</h2>
                     </div>
-                    <p class="tax-price">
-                        Zion Villa Beach view Resort is a budget hotel in Varkala, located in close proximity to the main market and travel hubs. <br> Guests are offered accommodation in spacious rooms, equipped with amenities like .Parking facility and medical aid are few of the conveniences offered at Zion Villa Beach view Resort in Varkala.
+                     <p class="tax-price">
+                        The area is popular for cycling, and bike hire and car hire are available at the hotel <br> .Popular points of interest near Gone Coastal Homestay include Varkala Beach, <br> Odayam Beach and Aaliyirakkm Beach. The nearest airport is Thiruvananthapuram International Airport, 41 km from the accommodation.
                     </p> <br>
 
                     <div class="property_div">
