--- a/templates/ashokam_details.html
+++ b/templates/ashokam_details.html
@@ -309,7 +309,9 @@
                         <div class="single-footer-widget">
                             <div>
                                 <h6 class="footer_title">About Agency</h6>
-                                <p class="footer-about">The world has become so fast paced that people don’t want to stand by reading a page of information, they would much rather look at a presentation and understand the message. It has come to a point </p>
+                                <p class="footer-about">Escape to the arms of nature with Ashokam Resort Varkala, a sea-facing property amidst lush greenery with luxury accommodation and premium amenities.
+                                    The property is situated at a tranquil location heaving natural views all around.
+                                    A conference hall is available on-site for hosting corporate meetings.</p>
                             </div>
 
                            
