--- a/templates/cliffcounty_details.html
+++ b/templates/cliffcounty_details.html
@@ -224,7 +224,8 @@
                         <div class="single-footer-widget">
                             <div>
                                 <h6 class="footer_title">About Agency</h6>
-                                <p class="footer-about">The world has become so fast paced that people don’t want to stand by reading a page of information, they would much rather look at a presentation and understand the message. It has come to a point </p>
+                                <p class="footer-about"> Popular points of interest near the accommodation include
+                                    Odayam Beach, Aaliyirakkm Beach, and Varkala Cliff,Black Sand Beach, Kappil Beach. The nearest airport is Thiruvananthapuram International Airport, 25 miles from Cliff County.</p>
                             </div>
 
                            
