--- a/templates/gone_costal.html
+++ b/templates/gone_costal.html
@@ -224,7 +224,9 @@
                         <div class="single-footer-widget">
                             <div>
                                 <h6 class="footer_title">About Agency</h6>
-                                <p class="footer-about">The world has become so fast paced that people don’t want to stand by reading a page of information, they would much rather look at a presentation and understand the message. It has come to a point </p>
+                                <p class="footer-about">The area is popular for cycling, and bike hire and car hire are available at the hotel
+                                    .Popular points of interest near Gone Coastal Homestay include Varkala Beach,
+                                    Odayam Beach and Aaliyirakkm Beach. The nearest airport is Thiruvananthapuram International Airport, 41 km from the accommodation.  </p>
                             </div>
 
                            
