--- a/templates/haiwa_details.html
+++ b/templates/haiwa_details.html
@@ -228,7 +228,8 @@
                         <div class="single-footer-widget">
                             <div>
                                 <h6 class="footer_title">About Agency</h6>
-                                <p class="footer-about">The world has become so fast paced that people don’t want to stand by reading a page of information, they would much rather look at a presentation and understand the message. It has come to a point </p>
+                                <p class="footer-about">A 5-minute walk from the Beach. The Haiwa By Hudels is an ideal tourist destination to stay in as it is located at a very convenient distance from the railway station and the airport.
+                                    . All the 10 rooms in the hotel provide a relaxing time for the guests. The rooms are designed with colorful interiors and fine furnishings. The tiled floors add grace to the rooms.</p>
                             </div>
 
                            
