--- a/templates/kerala_bamboo.html
+++ b/templates/kerala_bamboo.html
@@ -293,7 +293,7 @@
                         <div class="single-footer-widget">
                             <div>
                                 <h6 class="footer_title">About Agency</h6>
-                                <p class="footer-about">The world has become so fast paced that people don’t want to stand by reading a page of information, they would much rather look at a presentation and understand the message. It has come to a point </p>
+                                <p class="footer-about">Located in the heart of Varkala North Beach Cliff with direct beach access. A naturalistic lifestyle surrounded by the forest with good privacy.</p>
                             </div>
 
                            
