--- a/templates/moon_waves_details.html
+++ b/templates/moon_waves_details.html
@@ -280,7 +280,8 @@
                         <div class="single-footer-widget">
                             <div>
                                 <h6 class="footer_title">About Agency</h6>
-                                <p class="footer-about">The world has become so fast paced that people don’t want to stand by reading a page of information, they would much rather look at a presentation and understand the message. It has come to a point </p>
+                                <p class="footer-about">Located in Varkala, a 3-minute walk from Varkala Beach, Moon Waves Beach Resort provides accommodations with a terrace, free private parking, and a restaurant.
+                                    The property is around 46.7 km from Sree Padmanabhaswamy Temple, 46.7 km from Napier Museum, and a 16-minute walk from Janardhana swamy Temple.</p>
                             </div>
 
                            
