--- a/templates/nisara_details.html
+++ b/templates/nisara_details.html
@@ -217,7 +217,7 @@
                         <div class="single-footer-widget">
                             <div>
                                 <h6 class="footer_title">About Agency</h6>
-                                <p class="footer-about">The world has become so fast paced that people don’t want to stand by reading a page of information, they would much rather look at a presentation and understand the message. It has come to a point </p>
+                                <p class="footer-about">Situated within 1.3 km of Varkala Beach and 2 km of Odayam Beach in Varkala, Nisara Homestay provides accommodation with a kitchen. The air-conditioned accommodation is a few steps from Aaliyirakkm Beach. There is free private parking and the property features paid airport shuttle service.</p>
                             </div>
 
                            
