--- a/templates/skyframe_details.html
+++ b/templates/skyframe_details.html
@@ -274,7 +274,8 @@
                         <div class="single-footer-widget">
                             <div>
                                 <h6 class="footer_title">About Agency</h6>
-                                <p class="footer-about">The world has become so fast paced that people don’t want to stand by reading a page of information, they would much rather look at a presentation and understand the message. It has come to a point </p>
+                                <p class="footer-about">Sky Frame beach reosrt is one of the best premium category resorts in Varaka. The location and the grounds, being perched on the south cliff of Varkala,
+                                    with an amazing view, points to the Arabian sea. The resort has four sea view rooms and 3 non sea facing rooms which are really good and spacious.</p>
                             </div>
 
                            
