--- a/templates/ss_beach_resort.html
+++ b/templates/ss_beach_resort.html
@@ -228,7 +228,9 @@
                         <div class="single-footer-widget">
                             <div>
                                 <h6 class="footer_title">About Agency</h6>
-                                <p class="footer-about">The world has become so fast paced that people don’t want to stand by reading a page of information, they would much rather look at a presentation and understand the message. It has come to a point </p>
+                                <p class="footer-about">This lavish property is located near Helipad Papanasm Cliff in Varkala, Kerala. Moreover, it is just a few minutes away from Varkala Beach,
+                                    Varkala Aquarium and Sri Janardanaswamy Temple.Travellers have appreciated the property's location during their stay here.
+                                    Trivandrum International Airport is 49.2 km away from the property.</p>
                             </div>
 
                            
