--- a/templates/urban_cliff.html
+++ b/templates/urban_cliff.html
@@ -297,7 +297,8 @@
                         <div class="single-footer-widget">
                             <div>
                                 <h6 class="footer_title">About Agency</h6>
-                                <p class="footer-about">The world has become so fast paced that people don’t want to stand by reading a page of information, they would much rather look at a presentation and understand the message. It has come to a point </p>
+                                <p class="footer-about">Rooms in a Homestay
+                                    Idyllic resort with parking, shared lounge & cosy rooms </p>
                             </div>
 
                            
