--- a/templates/villa_skyframe_details.html
+++ b/templates/villa_skyframe_details.html
@@ -231,7 +231,7 @@
                         <div class="single-footer-widget">
                             <div>
                                 <h6 class="footer_title">About Agency</h6>
-                                <p class="footer-about">The world has become so fast paced that people don’t want to stand by reading a page of information, they would much rather look at a presentation and understand the message. It has come to a point </p>
+                                <p class="footer-about">Villa is all set to welcome you. He has been hosting since 2023. A people person at heart, Villa enjoys the company of people and exchanging stories with them. Besides hosting, he loves travelling, listening to music, reading, cooking, gardening and playing sports. Villa's hosting journey was inspired by the experiences of fellow hosts. </p>
                             </div>
 
                            
