--- a/templates/zion_villa_resort.html
+++ b/templates/zion_villa_resort.html
@@ -240,7 +240,8 @@
                         <div class="single-footer-widget">
                             <div>
                                 <h6 class="footer_title">About Agency</h6>
-                                <p class="footer-about">The world has become so fast paced that people don’t want to stand by reading a page of information, they would much rather look at a presentation and understand the message. It has come to a point </p>
+                                <p class="footer-about">Zion Villa Beach view Resort is a budget hotel in Varkala, located in close proximity to the main market and travel hubs.
+                                    Guests are offered accommodation in spacious rooms, equipped with amenities like .Parking facility and medical aid are few of the conveniences offered at Zion Villa Beach view Resort in Varkala.</p>
                             </div>
 
                            
